--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,12 +68,20 @@ packages = ["src/pyfundlib"]
 line-length = 100
 target-version = ["py310"]
 
-[tool.ruff.lint]
-target-version = "py310"
-line-length = 100
-select = ["E", "F", "W", "I", "B", "UP"]
-ignore = ["E501"]
-
 [tool.mypy]
 python_version = "3.10"
 strict = true
+[tool.ruff]
+# Minimal root section — required for ruff format
+
+[tool.ruff.format]
+line-length = 100
+quote-style = "double"
+indent-style = "space"
+
+[tool.ruff.lint]
+select = ["E", "W", "F", "I", "B", "UP", "C4", "PIE", "RUF", "PYI"]
+ignore = ["E501"]                    # Let Black own line-length rule win
+target-version = "py310"
+fixable = ["ALL"]
+unfixable = []
