--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ target-version = ["py310"]
 [tool.mypy]
 python_version = "3.10"
 strict = true
+
 [tool.ruff]
 # Minimal root section (required for ruff format)
 
@@ -83,5 +84,5 @@ line-ending = "auto"
 [tool.ruff.lint]
 select = ["E", "W", "F", "I", "B", "UP", "C4", "PIE", "RUF"]
 ignore = ["E501"]           # Let Black own line length
-target-version = "py310"
+target-python = "3.10"
 
