--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,9 +71,8 @@ target-version = ["py310"]
 [tool.mypy]
 python_version = "3.10"
 strict = true
-
 [tool.ruff]
-# Minimal root section (required for ruff format)
+# Minimal root section for Ruff
 
 [tool.ruff.format]
 quote-style = "double"
@@ -83,6 +82,6 @@ line-ending = "auto"
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "I", "B", "UP", "C4", "PIE", "RUF"]
-ignore = ["E501"]           # Let Black own line length
-target-python = "3.10"
+ignore = ["E501"]  # Black owns line length
+future-annotations = true
 
