--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ target-version = ["py310"]
 python_version = "3.10"
 strict = true
 [tool.ruff]
-# Minimal root section for Ruff
+# Minimal root section (required for ruff format)
 
 [tool.ruff.format]
 quote-style = "double"
@@ -82,6 +82,6 @@ line-ending = "auto"
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "I", "B", "UP", "C4", "PIE", "RUF"]
-ignore = ["E501"]  # Black owns line length
+ignore = ["E501"]           # Black owns line length
 future-annotations = true
 
